# ASEN-5254-Project

./: .gitignore  README.md
log/: latest_build
ros2_ws/: .colcon_ignore_packages  .gitignore  COLLISION_PLANNING_INFO.md  CUBOID_LOCATIONS.md  CURRENT_STATUS.md  DUAL_ROBOT_SETUP.md  EXPECTED_TOPICS.md  FINAL_BUILD.sh  FIX_BUILD_ERRORS.md  HARMONIC_QUICKSTART.md  IGNITION_SETUP.md  NAMESPACE_EXPLANATION.md  NEXT_STEPS.md  README_HARMONIC.md  README_UNIFIED_SETUP.md  SETUP_INSTRUCTIONS.md  SIMPLE_BUILD.md  UNIFIED_MOVEGROUP_SETUP.md  UNIFIED_SETUP_ERROR_EXPLANATION.md  UNIFIED_SETUP_LIMITATION.md  UNIFIED_SETUP_STATUS.md  build_correctly.sh  check_namespaced_topics.sh  fix_and_build.sh  install_ignition_deps.sh  requirements.txt
ros2_ws/src/panda_ign_description/: CMakeLists.txt  package.xml
ros2_ws/src/panda_ign_description/config/: panda_controllers.yaml  panda_dual_controllers.yaml
ros2_ws/src/panda_ign_description/launch/: dual_panda_demo.launch.py  dual_panda_simple.launch.py  panda_ignition_demo.launch.py
ros2_ws/src/panda_ign_description/panda/: panda.urdf
ros2_ws/src/panda_ign_description/scripts/: merge_dual_panda_urdf.py
ros2_ws/src/panda_ign_description/urdf/: dual_panda_unified.urdf.xacro  panda.urdf.xacro  panda_sim.urdf.xacro
ros2_ws/src/panda_ign_description/worlds/: pick_and_place_ign.sdf
ros2_ws/src/pick_and_place/: setup.py
ros2_ws/src/pick_and_place/launch/: dual_panda_complete.launch.py  dual_panda_single_group.launch.py
ros2_ws/src/pick_and_place/pick_and_place/: clean_pick_place.py  dual_arm_gui.py  dual_arm_single_group_gui.py  (+3 more)
(+14 files in other folders)
